--- a/web/index.html
+++ b/web/index.html
@@ -49,7 +49,7 @@
       height: 100vh;
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       color: white;
-      font-family: 'Cairo', Arial, sans-serif;
+      font-family: 'Arial', Arial, sans-serif;
     }
     
     .loading-spinner {
